# wpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  package.cmake  release.cmake  vcpkg-configuration.json  vcpkg.json  wpp-config.cmake  wpp_examples-config.cmake
example/hello_soa_coro/chat/: CMakeLists.txt  CMakePresets.json  Dockerfile  config.json  controller.h  entities.h  main.cpp  model.h  service.h  view.h  ws.h
example/hello_soa_coro/chat/htdocs/inc/: footer.inc  navbar.inc
example/hello_soa_coro/chat/htdocs/js/: mvc.js
example/hello_soa_coro/chat/locale/: properties  properties.de  properties.en
example/hello_soa_coro/chat/pem/: web.pem
example/hello_soa_coro/chat/view/: login.tpl
example/hello_soa_coro/session-service/: CMakeLists.txt  CMakePresets.json  Dockerfile  config.json  controller.h  entities.h  main.cpp  repo.h
example/standalone/: CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.alpine  Dockerfile.deb  Dockerfile.debian  Dockerfile.fed  Dockerfile.fedora  Makefile  controller.h  docker-compose.yml  model.h  user.db  vcpkg.json  view.h
example/standalone/docker/: build.sh  compile.sh  install.sh  utest.sh
example/standalone/locale/: properties.de_DE  properties.en
example/standalone/pem/: server.key  server.pem
example/standalone/win/: bootstrap.bat  build.bat
libraries/prio/: CMakeLists.txt  README.md  priocpp-config.cmake.in  priocpp.pc
libraries/prio-http/: CMakeLists.txt  Makefile  README.md  priohttp-config.cmake.in  priohttp.pc
libraries/prio-http/include/priohttp/: arg.h  attr.h  client.h  client_conversation.h  common.h  compress.h  conversation.h  cookie.h  header.h  http2.h  http2_client.h  http2_conversation.h  http_server.h  multipart.h  path.h  queryparams.h  request.h  response.h  urlencode.h
libraries/prio-http/include/priohttp/server/: reader.h  writer.h
libraries/prio-http/pem/: ca.crt  server.key
libraries/prio-http/src/: arg.cpp  attr.cpp  client.cpp  client_conversation.cpp  common.cpp  compress.cpp  conversation.cpp  cookie.cpp  header.cpp  http2.cpp  http2_client.cpp  http2_conversation.cpp  http_server.cpp  path.cpp  queryparams.cpp  request.cpp  response.cpp  server_reader.cpp  server_writer.cpp  urlencode.cpp
libraries/prio-http/t/: test.cpp
libraries/prio/examples/ssl-echo/: CMakeLists.txt  Makefile  ssl-echo.cpp  test.h  test.sh
libraries/prio/examples/ssl-echo/pem/: server.crt
libraries/prio/examples/tcp-echo/: CMakeLists.txt  Dockerfile  Makefile  tcp-echo.cpp  test.h  test.sh
libraries/prio/include/priocpp/: api.h  callback.h  common.h  connection.h  logger.h  loop.h  pipe.h  res.h  signal.h  ssl_connection.h  task.h  threadpool.h  timeout.h  url.h
libraries/prio/include/priocpp/impl/: asio.h  event.h
libraries/prio/pem/: server.pem
libraries/prio/src/: api.cpp  asio.cpp  asio_connection.cpp  asio_loop.cpp  asio_signal.cpp  asio_ssl_connection.cpp  asio_timeout.cpp  common.cpp  libevent.cpp  libevent_connection.cpp  libevent_loop.cpp  libevent_signal.cpp  libevent_ssl_connection.cpp  libevent_timeout.cpp  pipe.cpp  threadpool.cpp  url.cpp
libraries/prio/t/: http.cpp  test.cpp
libraries/repro-curl/: .gitignore  CMakeLists.txt  README.md  reprocurl-config.cmake.in  reprocurl.pc
libraries/repro-curl/examples/cli/: CMakeLists.txt  test.cpp
libraries/repro-curl/include/reprocurl/: api.h  asyncCurl.h  common.h  urlencode.h
libraries/repro-curl/pem/: server.key  server.pem
libraries/repro-curl/src/: Makefile  api.cpp  asyncCurl_boost_asio.cpp  asyncCurl_libevent.cpp  urlencode.cpp
libraries/repro-curl/t/: Makefile  api.cpp  api2.cpp  async.cpp  more.cpp  test.cpp
libraries/repro-curl/vagrant/clang/: Vagrantfile
libraries/repro-curl/vagrant/gcc/: Vagrantfile
libraries/repro-mysql/: CMakeLists.txt  Dockerfile  Makefile  README.md  repromysql-config.cmake.in  repromysql.pc  test.sql
libraries/repro-mysql/docker/: mysql.sh
libraries/repro-mysql/include/repromysql/: mysql-api.h  mysql-async.h  mysql-bindings.h  mysql-json.h
libraries/repro-mysql/src/: Makefile  mysql-api.cpp  mysql-async.cpp  mysql-binding.cpp
libraries/repro-mysql/t/: Makefile  test.cpp
libraries/repro-redis/: CMakeLists.txt  README.md  reproredis-config.cmake.in  reproredis.pc
libraries/repro-redis/include/reproredis/: redis.h
libraries/repro-redis/src/: redis.cpp
libraries/repro-redis/t/: test.cpp
libraries/repro-sqlite/: .gitignore  CMakeLists.txt  README.md  reprosqlite-config.cmake.in  reprosqlite.pc  test.db
libraries/repro-sqlite/include/reprosqlite/: sqlite-json.h  sqlite.h
libraries/repro-sqlite/src/: sqlite.cpp
libraries/repro-sqlite/t/: test.cpp
libraries/repro-web/: .gitignore  CMakeLists.txt  README.md  config.json  reproweb-config.cmake.in  reproweb.pc
libraries/repro-web/example/mvc/: CMakeLists.txt  Makefile  README.md  a.out  main.cpp
libraries/repro-web/example/readme/: CMakeLists.txt  main.cpp
libraries/repro-web/example/readme/view/: index.tpl
libraries/repro-web/example/wsdebug/: CMakeLists.txt  Dockerfile  Makefile  config.json  docker-compose.yml  test.cpp
libraries/repro-web/htdocs/: index.shtml
libraries/repro-web/include/reproweb/: traits.h  web_webserver.h
libraries/repro-web/include/reproweb/ctrl/: controller.h  filter.h  front_controller.h  handler.h  handler_info.h  redissession.h  session.h  ssi.h
libraries/repro-web/include/reproweb/json/: json.h  jwt.h  redisbus.h  service.h
libraries/repro-web/include/reproweb/serialization/: conneq.h  json.h  njson.h  parameter.h  sql.h  sqlite.h  web.h  xml.h
libraries/repro-web/include/reproweb/tools/: config.h  (+3 more)
libraries/repro-web/locale/: properties  properties.de  properties.de_DE  properties.en
libraries/repro-web/pem/: private.pem  server.crt
libraries/repro-web/src/: front_controller.cpp  handler_info.cpp  i18n.cpp  ic.cpp  jwt.cpp  metrics.cpp  session.cpp  ssi.cpp  tpl.cpp  web_webserver.cpp  websocket.cpp
libraries/repro-web/t/: entities.h  i18n.cpp  serialization.cpp  serialize.cpp  ssi.cpp  ssl.cpp  test.cpp  web.cpp  webtest.h  ws.cpp
(+218 files in other folders)
